--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h3 style="font-family:verdana; color:orange;">Flappy Bird by N.O.W. Mozilla Club</h3>
     <canvas id="canvas" width="288" height="512"></canvas>
-    <script src="./flappyBird.js"></script>
+    <script src="./flappy_bird/flappyBird.js"></script>
 </body>
 
 </html>
